--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -18,7 +18,7 @@
       <div class="col-lg-5 col-md-10" data-aos="fade-up">
         <div class="contact-form">
           <div class="mb-4">
-            <h3>Send A Message</h3>
+            <h3>Get In Touch</h3>
           </div>
           <form id="contact-form" action="{{.}}" method="POST">
             <p id="form-status" class="form-status"></p>
@@ -27,13 +27,21 @@
               <input class="form-control shadow-none" id="name" name="full_name" type="text" placeholder="Full Name" required>
             </div>
             <div class="form-group">
+              <label for="name">Number of Rooms</label>
+              <input class="form-control shadow-none" id="rooms" name="rooms" type="text" placeholder="Number Of Rooms" required>
+            </div>
+            <div class="form-group">
+              <label for="name">Do You Own The Property?</label>
+              <input class="form-control shadow-none" id="owner" name="owner" type="text" placeholder="Do You Own The Property?" required>
+            </div>
+            <div class="form-group">
               <label for="email">Email Address</label>
               <input class="form-control shadow-none" id="email" name="email" type="email" placeholder="Email Address" required>
             </div>
-            <div class="form-group">
+<!--             <div class="form-group">
               <label for="message">Your Message</label>
               <textarea class="form-control shadow-none" id="message" name="Comment" rows="4" required></textarea>
-            </div>
+            </div> -->
 
             <button class="btn btn-primary w-100 mt-4" type="submit" aria-label="Send Message">Send Message</button>
           </form>
