Remove page headers
Signed-off-by: magumbo <loz.tunnicliffe@gmail.com>

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -1,6 +1,6 @@
 {{define "main"}}
 
-{{ partial "page-header.html" . }}
+<!--{{ partial "page-header.html" . }}-->
 
 {{with .Params.who_we_are}}
 {{if .enable}}
