--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-{{ partial "page-header.html" . }}
+<!--{{ partial "page-header.html" . }}-->
 
 <section class="section">
   <div class="container">
