--- a/layouts/index.html
+++ b/layouts/index.html
@@ -55,7 +55,9 @@
 
 {{with .Params.banner}}
 <section class="banner">
-  <div class="container-xxl">
+  <div class="container-xxl hero-image">
+
+
     <div class="row text-center">
       <div class="col-12">
         <div class="block row justify-content-center no-gutters" data-aos="fade-up">
