--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -44,6 +44,7 @@
 
 	&.btn-primary {
 		background-color: $primary-color !important;
+		color: $light !important;
 		border: 0;
 		&:hover,
 		&:active,
