--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,7 @@
               </a>
 
               <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navHeader" aria-controls="navHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="d-inline lab la-buromobelexperte"></i>
+                <i class="d-inline las la-bars"></i>
                 <i class="d-none las la-times"></i>
               </button>
 
