--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -1,3 +1,19 @@
+.desktop-only{
+  display: block;
+
+  @include tablet{
+    display: none;
+  }
+}
+
+.mobile-only{
+  display: none;
+
+  @include tablet{
+    display: block;
+  }
+}
+
 // banner style
 .banner {
   position: relative;
@@ -26,6 +42,10 @@
     width: 100%;
     padding: 0;
     margin: 0;
+
+    @include tablet{
+      width: 250%;
+    }
   }
 
   .block,
@@ -990,10 +1010,17 @@
 
 // contact
 .contact-form {
+  margin-top: 2em;
+  margin-bottom: 2em;
+
   padding: 35px;
   padding-bottom: 45px;
   border-radius: 18px;
   box-shadow: 0px 4px 25px 0px rgba($black, 0.05);
+
+  label{
+    display: none;
+  }
 
   @include mobile {
     padding-left: 20px;
