--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -143,6 +143,10 @@ header {
     }
   }
 
+  .lang-code{
+    text-transform: uppercase;
+  }
+
   @media (min-width:991px) {
     .dropdown-menu {
       display: block;
@@ -225,3 +229,4 @@ header {
     }
   }
 }
+
