--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -43,6 +43,11 @@
     padding: 0;
     margin: 0;
 
+    &.contact-bg{
+      overflow: hidden;
+      max-height: 90vh;
+    }
+
     @include tablet{
       width: 250%;
     }
