--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -47,12 +47,12 @@
             {{site.Params.logo_text | markdownify}}
             {{ end }}
           </a>
-          <p class="mb-0">{{site.Params.footer_info | markdownify}}</p>
+          <p class="mb-0">{{site.Params.footer_info.subtitle | markdownify}}</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 mt-5 mt-sm-0" data-aos="fade-up" data-aos-delay="50">
         <div class="footer-widget">
-          <h3 class="mb-4 h4">Socials</h3>
+          <h3 class="mb-4 h4">{{site.Params.footer_info.socials | markdownify}}</h3>
 
           {{with site.Params.contact_info.email}}
           <ul class="footer-links list-unstyled mb-4">
@@ -78,7 +78,7 @@
       </div>
       <div class="col-lg-2 col-md-6 col-sm-6 mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="100">
         <div class="footer-widget">
-          <h3 class="mb-4 h4">Quick Links</h3>
+          <h3 class="mb-4 h4">{{site.Params.footer_info.quick_links | markdownify}}</h3>
 
           <ul class="footer-links list-unstyled">
             {{range site.Menus.footer}}
@@ -89,7 +89,7 @@
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
         <div class="footer-widget">
-          <h3 class="mb-4 h4">Location &amp; Contact</h3>
+          <h3 class="mb-4 h4">{{site.Params.footer_info.location | markdownify}}</h3>
 
           {{with site.Params.contact_info}}
           <ul class="footer-links list-unstyled">
