--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -13,36 +13,32 @@
 
   <div class="container">
     <div class="row justify-content-center align-items-center">
-      {{with site.Params.contact_form_action}}
+      {{with .Params.contact_form}}
       <div class="col-lg-5 col-md-10" data-aos="fade-up">
         <div class="contact-form">
           <div class="mb-4">
-            <h3>Get In Touch</h3>
+            <h3>{{$.Params.subtitle | markdownify}}</h3>
           </div>
-          <form id="contact-form" action="{{.}}" method="POST">
+          <form id="contact-form" action="{{site.Params.contact_form_action}}" method="POST">
             <p id="form-status" class="form-status"></p>
             <div class="form-group">
-              <label for="name">Full Name</label>
-              <input class="form-control shadow-none" id="name" name="full_name" type="text" placeholder="Full Name" required>
+              <label for="name">{{.full_name | markdownify}}</label>
+              <input class="form-control shadow-none" id="name" name="full_name" type="text" placeholder="{{.full_name | markdownify}}" required>
             </div>
             <div class="form-group">
-              <label for="name">Number of Rooms</label>
-              <input class="form-control shadow-none" id="rooms" name="rooms" type="text" placeholder="Number Of Rooms" required>
+              <label for="name">{{.rooms | markdownify}}</label>
+              <input class="form-control shadow-none" id="rooms" name="rooms" type="text" placeholder="{{.rooms | markdownify}}" required>
             </div>
             <div class="form-group">
-              <label for="name">Do You Own The Property?</label>
-              <input class="form-control shadow-none" id="owner" name="owner" type="text" placeholder="Do You Own The Property?" required>
+              <label for="name">{{.owner | markdownify}}</label>
+              <input class="form-control shadow-none" id="owner" name="owner" type="text" placeholder="{{.owner | markdownify}}" required>
             </div>
             <div class="form-group">
-              <label for="email">Email Address</label>
-              <input class="form-control shadow-none" id="email" name="email" type="email" placeholder="Email Address" required>
+              <label for="email">{{$.Params.email | markdownify}}</label>
+              <input class="form-control shadow-none" id="email" name="email" type="email" placeholder="{{$.Params.email | markdownify}}" required>
             </div>
-<!--             <div class="form-group">
-              <label for="message">Your Message</label>
-              <textarea class="form-control shadow-none" id="message" name="Comment" rows="4" required></textarea>
-            </div> -->
 
-            <button class="btn btn-primary w-100 mt-4" type="submit" aria-label="Send Message">Send Message</button>
+            <button class="btn btn-primary w-100 mt-4" type="submit" aria-label="{{.send_message | markdownify}}">{{.send_message | markdownify}}</button>
           </form>
         </div>
       </div>
@@ -60,34 +56,37 @@
               'Accept': 'application/json'
             }
           }).then(response => {
-            status.innerHTML = "Thanks for your submission!";
+            status.innerHTML = "{{.thanks | markdownify}}";
             form.reset()
           }).catch(error => {
-            status.innerHTML = "Oops! There was a problem submitting your form";
+            status.innerHTML = "{{.oops | markdownify}}";
           });
         }
         form.addEventListener("submit", handleSubmit)
       </script>
       {{end}}
 
-            <div class="col-lg-5 col-md-8 text-center mb-5 mb-lg-0" data-aos="fade-up">
+      <div class="col-lg-5 col-md-8 text-center mb-5 mb-lg-0" data-aos="fade-up">
 
       </div>
     </div>
+  </div>
+</section>
 
+<section class="section-sm">
     <div class="section pb-0">
       <div class="row justify-content-center">
         <div class="col-12">
           <div class="section-title text-center" data-aos="fade-up">
-            <p class="text-uppercase">Contact us</p>
-            <h2 class="title">Get In Touch</h2>
+            <p class="text-uppercase">{{$.Params.title | markdownify}}</p>
+            <h2 class="title">{{$.Params.subtitle | markdownify}}</h2>
           </div>
         </div>
 
         {{with site.Params.contact_info.phone}}
         <div class="col-xl-3 col-lg-4 col-md-6 contact-widget" data-aos="fade-up">
           <div class="block text-center">
-            <h3 class="mb-4">Phone</h3>
+            <h3 class="mb-4">{{$.Params.phone | markdownify}}</h3>
             <ul class="list-unstyled">
               {{range .}}
               {{if .}}
@@ -102,7 +101,7 @@
         {{with site.Params.contact_info.email}}
         <div class="col-xl-3 col-lg-4 col-md-6 contact-widget" data-aos="fade-up" data-aos-delay="100">
           <div class="block text-center">
-            <h3 class="mb-4">Email Address</h3>
+            <h3 class="mb-4">{{$.Params.email | markdownify}}</h3>
             <ul class="list-unstyled">
               {{range .}}
               {{if .}}
@@ -117,7 +116,7 @@
         {{with site.Params.social}}
         <div class="col-xl-3 col-lg-4 col-md-12 contact-widget" data-aos="fade-up" data-aos-delay="200">
           <div class="block text-center">
-            <h3 class="mb-4">Social Media</h3>
+            <h3 class="mb-4">{{$.Params.social | markdownify}}</h3>
             <ul class="list-unstyled">
               {{range .}}
               {{if .}}
